# Projeto_de_hardware

./: package-lock.json  package.json
src/: App.tsx  Home.tsx  Middleware.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Context/: keyboardContext.tsx  userContext.tsx
src/components/: arabicKeyboard.tsx  fileButton.tsx  fullKeyboard.tsx  optionButtons.tsx
src/constants/: keyboard_types.ts
src/reducers/: index.tsx  keyboardReducer.tsx  userReducer.tsx
src/sagas/: userSaga.ts
src/screens/: Profile.tsx  calibration.tsx  configs.tsx  files.tsx  login.tsx  register.tsx
src/types/: storeTypes.ts
src/utils/: api.ts
