[package]
name = "projeto_de_hardware"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-all", "global-shortcut-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3.0"
enigo = "0.2.1"
tokio = { version = "1.38.0", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
